kubernetes/traefik/examples/example-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  # (Optional) Namespace
  # namespace: your-namespace
  # ---
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - match: Host(`your-hostname`)
    kind: Rule
    services:
    - name: your-service
      port: 80
  # (Optional) TLS
  # tls:
  #   secretName: your-tls-secret
