kubernetes/traefik/examples/ingressroutetcp.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: your-ingressroutetcp  # <-- Replace with your IngressRouteTCP name
  namespace: your-namespace   # <-- Replace with your namespace
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: HostSNI(`your-sni`)  # <-- Replace with your SNI
      priority: 10  # <-- (Optional) change rule priority
      services:
        - name: your-service  # <-- Replace with your service name
          port: 80
# --> (Optional) Enable TLS Passthrough
# tls:
#   passthrough: true
# <--
